Fix navbar arrow alignment

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -4,11 +4,11 @@
   backdrop-filter: saturate(180%) blur(20px);
   width: 100%;
   z-index: 1130;
+  .navText {
+    text-align: center;
+    margin: 0;
+  }
   .arrow {
-    position: relative;
-    cursor: pointer;
-    left: 50%;
-    transform: translateX(-50%);
     width: 30px;
     margin: $size-s 0;
   }
